# ChangeLog for net-misc/tor
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/tor/ChangeLog,v 1.148 2008/12/10 07:02:37 fauli Exp $

  10 Dec 2008; Christian Faulhammer <fauli@gentoo.org>
  -files/tor-0.2.0.31-sparc.patch, -tor-0.2.0.31-r1.ebuild:
  clean up

  09 Dec 2008; Friedrich Oslage <bluebird@gentoo.org> tor-0.2.0.32.ebuild:
  Stable on sparc, security bug #250018

  08 Dec 2008; Brent Baude <ranger@gentoo.org> tor-0.2.0.32.ebuild:
  Marking tor-0.2.0.32 ppc64 for bug 250018

  08 Dec 2008; Markus Meier <maekke@gentoo.org> tor-0.2.0.32.ebuild:
  x86 stable, bug #250018

  07 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org> tor-0.2.0.32.ebuild:
  ppc stable, bug #250018

  07 Dec 2008; Richard Freeman <rich0@gentoo.org> tor-0.2.0.32.ebuild:
  amd64 stable - 250018

*tor-0.2.0.32 (06 Dec 2008)

  06 Dec 2008; Christian Faulhammer <fauli@gentoo.org> +tor-0.2.0.32.ebuild:
  version bump for security bug 250018

  28 Nov 2008; Christian Faulhammer <fauli@gentoo.org> metadata.xml:
  Change my email address

  22 Nov 2008; Christian Faulhammer <opfer@gentoo.org>
  -tor-0.2.0.30-r1.ebuild, -tor-0.2.0.31.ebuild, tor-0.2.0.31-r1.ebuild:
  clean up and add stable KEYWORDS for -r1

  22 Nov 2008; Markus Meier <maekke@gentoo.org> tor-0.2.0.31.ebuild:
  amd64 stable, bug #244679

  14 Nov 2008; Ferris McCormick <fmccor@gentoo.org> tor-0.2.0.31.ebuild,
  tor-0.2.0.31-r1.ebuild:
  Address sparc alignment problems reported in Bug #246483 --- this fixes them
  but is untested on anything else.

*tor-0.2.0.31-r1 (14 Nov 2008)

  14 Nov 2008; Ferris McCormick <fmccor@gentoo.org>
  +files/tor-0.2.0.31-sparc.patch, +tor-0.2.0.31-r1.ebuild:
  Add new version to address sparc alignment problem, Bug #246483 which see
  for details.

  01 Nov 2008; nixnut <nixnut@gentoo.org> tor-0.2.0.31.ebuild:
  Stable on ppc wrt bug 244679

  30 Oct 2008; Raúl Porcel <armin76@gentoo.org> tor-0.2.0.31.ebuild:
  x86 stable #244679
