@@ -1,0 +1,3 @@
+tor           hard    nofile          30000
+tor           soft    nofile          30000
+
